# mantis-daedalus

./: README.md  appveyor.yml
installers/: InstallerUtils.hs  MantisInstaller.hs  MantisMacInstaller.hs  MantisWindowsInstaller.hs  WindowsInstaller.hs  build-keystore-unix.sh  build-keystore-win64.bat  installer.cabal
scripts/: build-installer-win64.bat  build-keystore-win64.bat  mantis-build-installer-unix.sh  mantis-build-installer-win64.bat
webpack/: package.js
